--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -22,6 +22,7 @@
       {% block content %}{% endblock %}
       <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
       <script src="{% static 'core/js/homeprofessores.js' %}"></script>
+      <script src="{% static 'core/js/reporte.js' %}"></script>
     </div>
   </body>
 </html>
