--- a/core/templates/core/perfil.html
+++ b/core/templates/core/perfil.html
@@ -31,8 +31,8 @@
 
     <div class="flex-1 mt-5">
       <span> {{ user.username.split.0.title }} {{ user.username.split.1.title }}</span> </br>
-      <label>RM: {{ user.pk }}</label> </br>
-      <label>E-mail: {{ user.email}}</label> </br>
+      <p>RM: {{ user.pk }}</p> 
+      <p>E-mail: {{ user.email}}</p> 
       <label>Curso:</label>
       <select class="col-span-2 pt-2 bg-color-grey rounded-full">
         <option value="op1">Coloque os cursos</option>
@@ -41,19 +41,33 @@
     </div>
 
     <div class="flex-1">
-      <label>Modulo/Série: {{ user.rg }} </label> </br>
-      <label>Turma: Coloque a turma</label>
+      <p>Modulo/Série: {{ user.rg }} </p>
+      <p>Turma: Coloque a turma</p>
     </div>
   </div>
 
-  <div class="flex">
-    <p class="pb-8 text-5xl text-color-txt-perfil font-semibold">
-      Perfil 
-    </p>
+
+  <div class="col-span-1">
+    <h1 class="text-xl text-color-dark-orange font-semibold"> Informações Pessoais 
+      <div class="text-base text-color-txt-perfil mt-5 px-8 py-5 w-auto h-max rounded-3xl bg-color-grey">
+        <p class="mb-2">Nascimento: <label class="text-base text-gray-400"> Infos aqui! </label> </p>
+        <p class="mb-2">RA SED:     <label class="text-base text-gray-400"> Infos aqui! </label> </p>
+        <p class="mb-2">CPF:        <label class="text-base text-gray-400"> Infos aqui! </label> </p>
+        <p>RG:                      <label class="text-base text-gray-400"> Infos aqui! </label> </p>
+      </div>
+    </h1>
   </div>
-  <div class="flex w-auto h-auto col-span-1 bg-color-grey">
-  </div>
-  <div class="flex w-auto h-auto col-span-1 bg-color-grey">
+  <div class="col-span-1">
+    <h1 class="text-xl text-color-dark-orange font-semibold"> Informações Pessoais 
+      <div class="text-base text-color-txt-perfil mt-5 px-8 py-5 w-auto h-max rounded-3xl bg-color-grey">
+        <label class="mb-2 pr-3">Senha Atual: </label> <input type="password" name="password" class="w-[400px] h-6 mb-2"> </br>
+        <label class="mb-2 pr-3">Nova Senha:  </label> <input type="password" name="respassword" class="w-[400px] h-6 mb-2"> </br>
+        <label class="mb-2 pr-[26px]">Confirmar:   </label> <input type="password" name="respassword2" class="w-[400px] h-6 mb-2"> </br>
+        <div class="flex w-max pl-56 pt-3">
+          <button class="w-32 h-10 border rounded-full border-color-dark-orange"> Alterar </button>
+        </div>
+      </div>
+    </h1>
   </div>
 </div>
 {% endblock %}
