--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" href="{% static 'core/images/logo.png' %}" />
     {% block head %}{% endblock %}
     <script defer src="{% static 'core/dist/js/page.js' %}"></script>
+    <script defer src="{% static 'core/js/filter.js' %}"></script>
   </head>
   <body class="relative flex h-screen bg-slate-200" x-data="{ open: false }">
     {% include "core/messages.html" %}
