--- a/core/templates/core/boletim.html
+++ b/core/templates/core/boletim.html
@@ -1,10 +1,35 @@
 {% extends 'core/base.html' %} {% load static %} {% block head %}
 
 {% endblock %} {% block content %}
-<div class="flex justify-center pb-40 ">
-  <div class="grid grid-cols-10 md:grid-rows-6 gap-10 pt-44">
-    <div class="col-span-6 col-start-2 h-auto w-max rounded-3xl bg-color-boletim">
-      <table class=" border-separate border-spacing-3 pl-2">
+<div class="flex justify-center pb-40">
+  <div class="grid grid-cols-10 md:grid-rows-6 gap-10 pt-24">
+    <div class="col-start-2 text-[30px] text-color-txt-perfil font-semibold w-[50%]">
+      BOLETIM
+    </div>
+    <div class="w-max col-start-10 text-color-txt-perfil ">
+      <button id="openModalButton">
+        <svg 
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none" 
+          viewBox="0 0 24 24" 
+          stroke-width="1.5" 
+          stroke="currentColor" 
+          class="w-6 h-6"
+          >
+          <path 
+          stroke-linecap="round" 
+          stroke-linejoin="round" 
+          d="M10.5 6h9.75M10.5 6a1.5 1.5 0 11-3 0m3 0a1.5 1.5 0 10-3 0M3.75 6H7.5m3 12h9.75m-9.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-3.75 0H7.5m9-6h3.75m-3.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-9.75 0h9.75" 
+          />
+        </svg>
+      </button>
+    </div>
+    <div id="modal" class="hidden">
+      asdasdad
+      <button id="closeModalButton" class="">Fechar</button>
+    </div>
+    <div class="col-span-6 col-start-2 h-auto w-max rounded-3xl shadow-lg bg-color-boletim">
+      <table class="border-separate border-spacing-3 pl-2">
         <thead>
             <tr>
               <th class="bg-color-boletim rounded-l-3xl"></th> <!-- empty -->
@@ -99,7 +124,7 @@
       </table>
     </div>
 
-    <div class="flex col-span-2 md:row-start-2 h-auto w-max rounded-3xl bg-color-boletim " :class="open ? 'ml-52' : 'ml-6'">
+    <div class="flex col-span-2 md:row-start-2 h-auto w-max rounded-3xl bg-color-boletim shadow-lg" :class="open ? 'ml-52' : 'ml-6'">
       <table class="border-separate border-spacing-3">
         <thead>
           <tr>
@@ -149,26 +174,26 @@
 
     
 
-    <div class="col-span-6 col-start-3 md:row-start-3 h-[150px] w-full rounded-[50px] bg-color-boletim">
+    <div class="col-span-6 col-start-3 md:row-start-3 h-[150px] w-full rounded-[50px] bg-color-boletim shadow-lg">
       <div class="flex">
         <p class="px-10 py-[58px] text-2xl">Total:</p
         >
         <div class="grid grid-cols-4 gap-10 w-full text-center pr-5 py-3"> <!-- ficaram faltando o alinhamento ao centro, pois acabei não conseguindo (bruno)-->
           <div class="col-span-1">
-            <div class="h-14 mb-4 rounded-3xl bg-color-dark-orange font-semibold">Aulas Dadas</div>
-            <div class="h-14 rounded-3xl bg-color-grey"><span class="text-3xl"> 222 </span></div>
+            <div class="flex justify-center h-14 mb-4 rounded-3xl items-center bg-color-dark-orange"><span class="font-semibold">Aulas Dadas </span></div>
+            <div class="flex justify-center h-14 rounded-3xl items-center bg-color-grey"><span class="text-3xl"> 222 </span></div>
           </div>
           <div class="col-span-1">
-            <div class="h-14 mb-4 rounded-3xl bg-color-dark-orange"><span class="font-semibold">Faltas </span></div>
-            <div class="h-14 rounded-3xl bg-color-grey"><span class="text-3xl"> 222 </span></div>
+            <div class="flex justify-center h-14 mb-4 rounded-3xl items-center bg-color-dark-orange"><span class="font-semibold">Faltas </span></div>
+            <div class="flex justify-center h-14 rounded-3xl items-center bg-color-grey"><span class="text-3xl"> 222 </span></div>
           </div>
           <div class="col-span-1">
-            <div class="h-14 mb-4 rounded-3xl bg-color-dark-orange"><span class="font-semibold">Frequência </span></div>
-            <div class="h-14 rounded-3xl bg-color-grey"><span class="text-3xl"> 222 </span></div>
+            <div class="flex justify-center h-14 mb-4 rounded-3xl items-center bg-color-dark-orange"><span class="font-semibold">Frequência </span></div>
+            <div class="flex justify-center h-14 rounded-3xl items-center bg-color-grey"><span class="text-3xl"> 222 </span></div>
           </div>
           <div class="col-span-1">
-            <div class="h-14 mb-4 rounded-3xl bg-color-dark-orange"><span class="font-semibold">Faltas Permitidas </span></div>
-            <div class="h-14 rounded-3xl bg-color-grey"><span class="text-3xl"> 222 </span></div>
+            <div class="flex justify-center h-14 mb-4 rounded-3xl items-center bg-color-dark-orange"><span class="font-semibold">Faltas Permitidas </span></div>
+            <div class="flex justify-center h-14 rounded-3xl items-center bg-color-grey"><span class="text-3xl"> 222 </span></div>
           </div>
         </div>
       </div>
@@ -176,12 +201,12 @@
 
     
 
-    <div class="col-start-2 col-end-10 pb-6 h-auto w-full rounded-[50px] bg-color-boletim"> <!-- FICHA DE DESEMPENHO -->
+    <div class="col-start-2 col-end-10 pb-6 h-auto w-full rounded-[50px] bg-color-boletim shadow-lg"> <!-- FICHA DE DESEMPENHO -->
       <div class="flex justify-center">
         <div class="w-11/12 h-10 mt-4 rounded-full font-semibold text-center p-2 bg-color-dark-orange"> Ficha de Desempanho - Sala de Aula </div>
       </div>
-      <div class="grid grid-cols-11 gap-5 text-center pt-5">
-        <div class="col-span-3 col-start-2 h-10 pt-2 bg-color-name-boletim rounded-full">Instrumento</div>
+      <div class="grid grid-cols-11 gap-5 text-center pt-5" :class="open ? 'pl-28' : 'pl-0'">
+        <div class="col-span-3 col-start-2 h-10 pt-2 bg-color-name-boletim rounded-full" :class="open ? 'col-start-1' : 'col-start-2'">Instrumento</div>
 
         <div class="col-span-2 pt-2 bg-color-name-boletim rounded-full">Data</div>
 
@@ -190,8 +215,8 @@
         <div class="col-span-2 pt-2 bg-color-name-boletim rounded-full">Observação</div>
       </div>
 
-      <div class="grid grid-cols-11 gap-5 text-center pt-5">
-        <div class="col-span-3 col-start-2 h-10 pt-2 bg-color-grey rounded-full">asdasd</div>
+      <div class="grid grid-cols-11 gap-5 text-center pt-5" :class="open ? 'pl-28' : 'pl-0'">
+        <div class="col-span-3 col-start-2 h-10 pt-2 bg-color-grey rounded-full" :class="open ? 'col-start-1' : 'col-start-2'">asdasd</div>
 
         <div class="col-span-2 pt-2 bg-color-grey rounded-full">asdasd</div>
 
@@ -200,21 +225,32 @@
         <div class="col-span-2 pt-2 bg-color-grey rounded-full">asdasd</div>
       </div>
 
-      <div class="grid grid-cols-11 gap-5 text-center pt-2">
-        <div class="col-span-3 col-start-2 h-10 pt-2 bg-color-grey rounded-full">asdasd</div>
+      <div class="grid grid-cols-11 gap-5 text-center pt-2" :class="open ? 'pl-28' : 'pl-0'">
+        <div class="col-span-3 col-start-2 h-10 pt-2 bg-color-grey rounded-full" :class="open ? 'col-start-1' : 'col-start-2'">oii</div>
 
-        <div class="col-span-2 pt-2 bg-color-grey rounded-full">asdasd</div>
+        <div class="col-span-2 h-10 pt-2 bg-color-grey rounded-full">asdasd</div>
 
-        <div class="col-span-2 pt-2 bg-color-grey rounded-full">asdasd</div>
+        <div class="col-span-2 h-10 pt-2 bg-color-grey rounded-full">asdasd</div>
+        
+        
+        <form action="?" method="POST" class="flex col-span-2 space-x-3">{% csrf_token %}
+          {% if request.user.is_superuser %}
+          <input type="text" 
+          name="obs"
+          class="pt-2 bg-color-grey rounded-full border-none"
+          maxlength="200" 
+          placeholder="Escreva Aqui!">
 
-        <select class="col-span-2 pt-2 bg-color-grey rounded-full">
-          <option value="op1">Oi</option>
-          <option value="op2">Tudo</option>
-          <option value="op3">Bem</option>
-          <option value="op4">Com</option>
-          <option value="op5">Você</option>
-          <option value="op6">?</option>
-        </select>
+          <button type="submit" class="flex-shrink-0 bg-color-dark-orange hover:bg-color-secondary text-sm text-white py-1 px-2 rounded transition">
+            Enviar
+          </button>
+
+          {% else %}
+          <div class="flex h-10 w-full pt-2 bg-color-grey rounded-full border-none cursor-not-allowed">
+            <p name="obs_student" value="{{ request.POST.obs }}" readonly>
+          </div>
+          {% endif %}
+        </form>
       </div>
     </div>
 
@@ -224,25 +260,24 @@
       <div class="flex flex-col col-start-3 col-end-9 h-[80px] w-full rounded-[50px] bg-white justify-center relative">
         <div class="flex items-center">
           <label class="ml-10 text-3xl font-semibold w-[700px] text-color-dark-orange" :class="open ? 'text-xl' : 'text-3xl'" >Reconsideração de Notas (Aberto até 00/00/0000)</label>
-          <svg 
-          xmlns="http://www.w3.org/2000/svg" 
-          fill="none" 
-          viewBox="0 0 24 24" 
-          stroke-width="1.5" 
-          stroke="currentColor" 
-          class="w-10 h-10 absolute top-9 right-10 transform -translate-y-1/2 translate-x-1/2"
-          >
-            <path 
-            stroke-linecap="round" 
-            stroke-linejoin="round" 
-            d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" 
-            />
-          </svg>
+            <button>
+              <svg 
+                xmlns="http://www.w3.org/2000/svg" 
+                fill="none" 
+                viewBox="0 0 24 24" 
+                stroke-width="1.5" 
+                stroke="currentColor" 
+                class="w-10 h-10 absolute top-9 right-10 transform -translate-y-1/2 translate-x-1/2"
+                >
+                  <path 
+                  stroke-linecap="round" 
+                  stroke-linejoin="round" 
+                  d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" 
+                  />
+                </svg>
+            </button>
         </div>
         <label class="ml-10 text-base text-gray-400">Clique no botão para conseguir sua reconsideração de nota</label>
       </div>
-</div>
+  </div>
 {% endblock %}
-
-
-
