--- a/management/templates/management/courses_editor.html
+++ b/management/templates/management/courses_editor.html
@@ -17,7 +17,7 @@
         <li>{{ course.slug }}</li>
         {% endfor %}
         <li>
-          <button class="flex items-center gap-1" @click="dialog = true">
+          <button class="flex items-center gap-1" @click="courseDialog = true">
             <span>Adicionar</span>
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -55,6 +55,27 @@
         <div class="field">
           <label for="txt-slug">Código</label>
           <input type="text" name="slug" id="txt-slug" required />
+        </div>
+        <div class="field">
+          <label for="bx-time">Horário</label>
+          <div id="bx-time">
+            <div>
+              <input type="radio" name="time" id="rd-morning" value="M">
+              <label for="rd-morning">Manhã</label>
+            </div>
+            <div>
+              <input type="radio" name="time" id="rd-evening" value="E">
+              <label for="rd-evening">Tarde</label>
+            </div>
+            <div>
+              <input type="radio" name="time" id="rd-night" value="N">
+              <label for="rd-night">Noite</label>
+            </div>
+          </div>
+        </div>
+        <div class="field">
+          <label for="txt-coordinator">Coordenador</label>
+          <input type="text" name="coordinator" id="txt-coordinator">
         </div>
         <div class="mt-3 flex gap-2">
           <button @click.prevent="courseDialog = false" class="btn">
