Added import teachers and sample courses

--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -15,7 +15,11 @@
       >
         Alunos
       </li>
-      <li class="control bg-gray-200" data-section="teachers" @click="reload">
+      <li
+        class="control bg-gray-200"
+        data-section="teachers"
+        @click="reload('teachers', 'Professores', `{% url 'query' 'teacher' '1' %}`)"
+      >
         Professores
       </li>
       <li class="control bg-gray-200" data-section="courses" @click="reload">
@@ -24,9 +28,6 @@
       <li class="control bg-gray-200">
         <a href="{% url 'courses_editor' %}">Cursos</a>
       </li>
-      <!--
-      <li class="control bg-gray-200 " data-section="classrooms" @click="reload">Turmas</li>
-      -->
       {% if user|can:'create_user' %}
       <li class="btn control bg-cyan-600">
         <a href="{% url 'enroll' %}" class="flex items-center font-semibold">
