--- a/management/templates/management/import.html
+++ b/management/templates/management/import.html
@@ -57,7 +57,7 @@
     </table>
   </section>
 
-  <h2 class="mb-2 text-xl font-bold">Campos necessários</h2>
+  <h2 class="mb-2 text-xl font-bold">Campos opxionais</h2>
 
   <section
     class="relative mb-3 overflow-x-auto rounded-lg bg-slate-300 p-4 shadow"
