--- a/core/templates/core/secret.html
+++ b/core/templates/core/secret.html
@@ -9,14 +9,15 @@
     action="{% url 'secret' %}"
     method="POST"
     class="flex flex-col gap-3"
+    enctype="multipart/form-data"
     @submit="submit"
     x-data="fields"
   >
-    <h1 class="mb-2 font-sans text-3xl font-bold">Conta administrativa</h1>
+    <h1 class="font-sans mb-2 text-3xl font-bold">Conta administrativa</h1>
     {% csrf_token %}
     <section class="grid grid-cols-2 gap-4">
       <article>
-        <h2 class="mb-2 font-sans text-2xl font-bold">Informações pessoais</h2>
+        <h2 class="font-sans mb-2 text-2xl font-bold">Informações pessoais</h2>
         <div class="flex gap-3">
           <div class="field grow">
             <label for="txt-username">Nome</label>
@@ -124,7 +125,7 @@
         </div>
       </article>
       <article x-data="address">
-        <h2 class="mb-2 font-sans text-2xl font-bold">Contato</h2>
+        <h2 class="font-sans mb-2 text-2xl font-bold">Contato</h2>
 
         <div class="flex gap-3">
           <div class="field grow">
@@ -216,13 +217,43 @@
             <input type="text" name="complement" id="txt-comp" size="8" />
           </div>
         </div>
-        <button class="btn" @click.prevent="confirmation = true">
-          Continuar
-        </button>
+        <div class="flex gap-2">
+          <label
+            for="file-picture"
+            class="btn flex w-max cursor-pointer items-center gap-1"
+          >
+            <span>Foto de perfil</span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="2.2"
+              stroke="currentColor"
+              class="h-5 w-5"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M9 8.25H7.5a2.25 2.25 0 00-2.25 2.25v9a2.25 2.25 0 002.25 2.25h9a2.25 2.25 0 002.25-2.25v-9a2.25 2.25 0 00-2.25-2.25H15m0-3l-3-3m0 0l-3 3m3-3V15"
+              />
+            </svg>
+          </label>
+          <input
+            type="file"
+            name="picture"
+            id="file-picture"
+            accept="image/*"
+            required
+            hidden
+          />
+          <button class="btn" @click.prevent="confirmation = true">
+            Continuar
+          </button>
+        </div>
       </article>
       <dialog
         :open="confirmation"
-        class="rounded-xl py-5 px-8 shadow-lg border border-slate-400"
+        class="rounded-xl border border-slate-400 px-8 py-5 shadow-lg"
         @keydown.escape.window="confirmation = false"
       >
         <div x-data="dialog">
