--- a/core/templates/core/perfil.html
+++ b/core/templates/core/perfil.html
@@ -1,46 +1,75 @@
 {% extends 'core/base.html' %} {% load static %} {% block head %}
-
+<title>Perfil de {{ user.username.split.0 }}</title>
 {% endblock %} {% block content %}
-
-
-
-<div class="pt-32 grid place-items-center">
-  <p class="pb-8 text-5xl text-color-txt-perfil font-semibold">
-    Perfil 
-  </p>
-  <div class="flex flex-col h-[420] w-[320] rounded-3xl bg-color-bg-perfil">
-    <div class=" pl-16 ">
-      <svg 
-      xmlns="http://www.w3.org/2000/svg" 
-      fill="none" 
-      viewBox="0 0 24 24" 
-      stroke-width="1.5" 
-      stroke="currentColor" 
-      class="w-[200px] h-[200px]"
-      >
-        <path stroke-linecap="round"
-        stroke-linejoin="round" 
-        d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z" 
-        />
-      </svg>
-    </div>
-
-    <div class="pl-5 items-center">
+<main class="px-8" x-data="{ picDialog = false }">
+  <h1 class="pb-6 text-4xl font-bold text-color-txt-perfil">Perfil</h1>
+  <section class="flex mb-8">
+    <img
+      src="{{ user.profile.picture.url }}"
+      alt="Foto de perfil"
+      @click="picDialog = true"
+      class="cursor-pointer w-36 h-36 rounded-full border-[6px] border-color-txt-perfil"
+    />
+    <div class="pl-5">
+      <h2 class="truncate text-xl font-semibold text-color-txt-perfil">
+        {{ user.username }}
+      </h2>
       <ul>
-        <li class="pb-3">
-          <label class="text-color-txt-perfil font-bold">RM:</label> {{ user.pk }}
+        <li>
+          <span class="font-bold text-color-txt-perfil">RA:</span>
+          <span>{{ user.pk }}</span>
         </li>
         <li>
-          <label class="text-color-txt-perfil font-bold">Nome:</label> {{ user.username.split.0.title }} {{ user.username.split.1.title }}
+          <span class="font-bold text-color-txt-perfil">E-mail:</span>
+          <span>{{ user.email }}</span>
         </li>
-      </ul> 
+      </ul>
     </div>
-  </div>
-</div>
-
-<span>
-  {{user.profile.rg}}
-</span>
-
-
+  </section>
+  <article class="flex justify-between">
+    <section>
+      <h2 class="font-semibold text-color-secondary text-xl">Informações Pessoais</h2>
+      <ul class="bg-color-bg-perfil rounded-2xl p-6 mt-1">
+        <li>
+          <span class="font-semibold mr-1 text-color-txt-perfil">Nascimento:</span>
+          <span>{{ user.profile.birthdate|date:'d/m/Y' }}</span>
+        </li>
+        <li>
+          <span class="font-semibold mr-1 text-color-txt-perfil">RA SED???:</span>
+          <span>{{ user.pk }}</span>
+        </li>
+        <li>
+          <span class="font-semibold mr-1 text-color-txt-perfil">CPF:</span>
+          <span>{{ user.profile.cpf }}</span>
+        </li>
+        <li>
+          <span class="font-semibold mr-1 text-color-txt-perfil">RG:</span>
+          <span>{{ user.profile.rg }}</span>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2 class="font-semibold text-color-secondary text-xl">Senha</h2>
+      <form class="bg-color-bg-perfil rounded-2xl p-6 mt-1">
+        calma lá vai ficar pronto
+        <!-- TODO: formulário para trocar senha -->
+      </form>
+    </section>
+  </article>
+  <dialog
+    :open="picDialog"
+    class="rounded-xl border border-slate-400 px-8 py-5 shadow-lg"
+  >
+    <img
+      :src="{{ user.profile.picture.url }}"
+      alt="Imagem de perfil"
+    />
+    <form
+      action="{% url 'profile_picture' %}"
+      method="post"
+      enctype="multipart/form-data"
+    >
+    </form>
+  </dialog>
+</main>
 {% endblock %}
