Crated chamada and updated homeprofessores

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -21,7 +21,8 @@
       {% endif %}
       {% block content %}{% endblock %}
       <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-      <script src="{% static 'core/js/homeprofessores.js' %}"></script>
+      <script src="{% static 'core/js/turmaprofessores.js' %}"></script>
+      <script src="{% static 'core/js/chamadaprofessores.js' %}"></script>
       <script src="{% static 'core/js/reporte.js' %}"></script>
     </div>
   </body>
