--- a/core/templates/core/reporte.html
+++ b/core/templates/core/reporte.html
@@ -4,54 +4,82 @@
 
 {% endblock %} {% block content %}
 <main class="framed m-8 mb-20 px-5">
-  <h1 class="text-color-primary font-bold text-[40px] mt-12 ml-10 mb-10 md:mx-auto md:block">Reporte de Problemas</h1>
+  <h1
+    class="mb-10 ml-10 mt-12 text-[40px] font-bold text-color-primary md:mx-auto md:block"
+  >
+    Reporte de Problemas
+  </h1>
   <div class="flex flex-col justify-center">
-    <span class="text-color-primary text-[30px] text-center mb-5">Assunto</span>
+    <span class="mb-5 text-center text-[30px] text-color-primary">Assunto</span>
     <div class="flex justify-center">
-      <div class="flex flex-col h-[800px] w-[880] rounded-2xl bg-white justify-center items-center md:flex-row md:justify-center md:h-[180px]">
+      <div
+        class="flex h-[800px] w-[880] flex-col items-center justify-center rounded-2xl bg-white md:h-[180px] md:flex-row md:justify-center"
+      >
         <input type="radio" name="imagem" id="i1" class="hidden" />
         <label for="i1" class="flex flex-col items-center rounded-2xl">
-          <img src="{% static '/core/images/professor.png' %}" class="h-16 w-16">
+          <img
+            src="{% static '/core/images/professor.png' %}"
+            class="h-16 w-16"
+          />
           <span class="mx-2 px-4 py-4">Professor(a)</span>
         </label>
         <input type="radio" name="imagem" id="i2" class="hidden" />
         <label for="i2" class="flex flex-col items-center rounded-2xl">
-          <img src="{% static '/core/images/aluno.png' %}" class="h-16 w-16">
+          <img src="{% static '/core/images/aluno.png' %}" class="h-16 w-16" />
           <span class="mx-2 px-7 py-4">Aluno(a)</span>
         </label>
         <input type="radio" name="imagem" id="i3" class="hidden" />
         <label for="i3" class="flex flex-col items-center rounded-2xl">
-          <img src="{% static '/core/images/funcionario.png' %}" class="h-16 w-16">
+          <img
+            src="{% static '/core/images/funcionario.png' %}"
+            class="h-16 w-16"
+          />
           <span class="mx-2 px-2 py-4">Funcionário(a)</span>
         </label>
         <input type="radio" name="imagem" id="i4" class="hidden" />
         <label for="i4" class="flex flex-col items-center rounded-2xl">
-          <img src="{% static '/core/images/concerto.png' %}" class="h-16 w-16">
+          <img
+            src="{% static '/core/images/concerto.png' %}"
+            class="h-16 w-16"
+          />
           <span class="mx-2 px-7 py-4">Concerto</span>
         </label>
         <input type="radio" name="imagem" id="i5" class="hidden" />
         <label for="i5" class="flex flex-col items-center rounded-2xl">
-          <img src="{% static '/core/images/limpeza.png' %}" class="h-16 w-16">
+          <img
+            src="{% static '/core/images/limpeza.png' %}"
+            class="h-16 w-16"
+          />
           <span class="mx-2 px-7 py-4">Limpeza</span>
         </label>
-        <input type="radio" name="imagem" id="i6" class="hidden"/>
+        <input type="radio" name="imagem" id="i6" class="hidden" />
         <label for="i6" class="flex flex-col items-center rounded-2xl">
-          <img src="{% static '/core/images/outros.png' %}" class="h-16 w-16">
+          <img src="{% static '/core/images/outros.png' %}" class="h-16 w-16" />
           <span class="mx-2 px-8 py-4">Outros</span>
         </label>
       </div>
     </div>
-    <span class="text-color-primary text-[30px] text-center mt-10 mb-5">Sobre</span>
+    <span class="mb-5 mt-10 text-center text-[30px] text-color-primary"
+      >Sobre</span
+    >
     <div class="flex justify-center">
       <div class="block h-[400px] w-[880px] rounded-2xl bg-white px-6 py-8">
         <div class="field flex-grow">
-          <textarea id="reclamacao" name="reclamacao" class="w-full h-80 border border-gray-300 rounded px-4 py-2"
-            placeholder="Digite sua reclamação aqui"></textarea>
+          <textarea
+            id="reclamacao"
+            name="reclamacao"
+            class="h-80 w-full rounded border border-gray-300 px-4 py-2"
+            placeholder="Digite sua reclamação aqui"
+          ></textarea>
         </div>
       </div>
     </div>
-    <div class="flex w-full flex-col gap-3 mt-10 md:block md:gap-2">
-      <input type="submit" value="Enviar" class="font-bold px-12 py-4 text-[21px] text-bold text-color-secondary rounded-full bg-color-secondary-dimm border border-color-secondary md:mx-auto md:mt-3 md:block" />
+    <div class="mt-10 flex w-full flex-col gap-3 md:block md:gap-2">
+      <input
+        type="submit"
+        value="Enviar"
+        class="text-bold rounded-full border border-color-secondary bg-color-secondary-dimm px-12 py-4 text-[21px] font-bold text-color-secondary md:mx-auto md:mt-3 md:block"
+      />
     </div>
   </div>
 </main>
