--- a/core/templates/core/turmaprofessores.html
+++ b/core/templates/core/turmaprofessores.html
@@ -2,60 +2,89 @@
 
 <!--Não está finalizado-->
 
-<link rel="stylesheet" href="{% static 'core/dist/css/homeprofessores.css' %}" />
+<link rel="stylesheet" href="{% static 'core/css/turmaprofessores.css' %}" />
 
 {% endblock %} {% block content %}
 <main class="framed m-8 mb-20 px-5">
-  <h1 class="text-color-primary font-bold text-[40px] text-left mt-12 ml-10 mb-10">Turmas</h1>
+  <h1
+    class="mb-10 ml-10 mt-12 text-left text-[40px] font-bold text-color-primary"
+  >
+    Turmas
+  </h1>
   <div class="flex justify-center">
-    <div class="h-[90px] w-[85%]">
-      <div class="swiper mySwiper carousel2">
+    <div class="h-[90px] w-[90%]">
+      <div class="swiper mySwiper carousel3">
         <div class="swiper-wrapper px-12">
           <div class="swiper-slide">
-            <div class="flex flex-col h-[70px] w-[230px] justify-center items-center border border-color-secondary rounded-full hover:bg-color-secondary-dimm">
-              <span class="text-color-secondary font-bold text-[24px]">1º GT</span>
+            <div
+              class="flex h-[60px] w-[200px] flex-col items-center justify-center rounded-full border border-color-secondary hover:bg-color-secondary-dimm"
+            >
+              <span class="text-[24px] font-bold text-color-secondary"
+                >1º GT</span
+              >
             </div>
           </div>
           <div class="swiper-slide">
             <div
-              class="flex flex-col h-[70px] w-[230px] justify-center items-center border border-color-secondary rounded-full hover:bg-color-secondary-dimm">
-              <span class="text-color-secondary font-bold text-[24px]">2º HT</span>
+              class="flex h-[60px] w-[200px] flex-col items-center justify-center rounded-full border border-color-secondary hover:bg-color-secondary-dimm"
+            >
+              <span class="text-[24px] font-bold text-color-secondary"
+                >1º GT</span
+              >
             </div>
           </div>
           <div class="swiper-slide">
             <div
-              class="flex flex-col h-[70px] w-[230px] justify-center items-center border border-color-secondary rounded-full hover:bg-color-secondary-dimm">
-              <span class="text-color-secondary font-bold text-[24px]">3º GT</span>
+              class="flex h-[60px] w-[200px] flex-col items-center justify-center rounded-full border border-color-secondary hover:bg-color-secondary-dimm"
+            >
+              <span class="text-[24px] font-bold text-color-secondary"
+                >1º GT</span
+              >
             </div>
           </div>
           <div class="swiper-slide">
             <div
-              class="flex flex-col h-[70px] w-[230px] justify-center items-center border border-color-secondary rounded-full hover:bg-color-secondary-dimm">
-              <span class="text-color-secondary font-bold text-[24px]">3º HT</span>
+              class="flex h-[60px] w-[200px] flex-col items-center justify-center rounded-full border border-color-secondary hover:bg-color-secondary-dimm"
+            >
+              <span class="text-[24px] font-bold text-color-secondary"
+                >1º GT</span
+              >
             </div>
           </div>
           <div class="swiper-slide">
             <div
-              class="flex flex-col h-[70px] w-[230px] justify-center items-center border border-color-secondary rounded-full hover:bg-color-secondary-dimm">
-              <span class="text-color-secondary font-bold text-[24px]">1º GT</span>
+              class="flex h-[60px] w-[200px] flex-col items-center justify-center rounded-full border border-color-secondary hover:bg-color-secondary-dimm"
+            >
+              <span class="text-[24px] font-bold text-color-secondary"
+                >1º GT</span
+              >
             </div>
           </div>
           <div class="swiper-slide">
             <div
-              class="flex flex-col h-[70px] w-[230px] justify-center items-center border border-color-secondary rounded-full hover:bg-color-secondary-dimm">
-              <span class="text-color-secondary font-bold text-[24px]">1º GT</span>
+              class="flex h-[60px] w-[200px] flex-col items-center justify-center rounded-full border border-color-secondary hover:bg-color-secondary-dimm"
+            >
+              <span class="text-[24px] font-bold text-color-secondary"
+                >1º GT</span
+              >
             </div>
           </div>
           <div class="swiper-slide">
             <div
-              class="flex flex-col h-[70px] w-[230px] justify-center items-center border border-color-secondary rounded-full hover:bg-color-secondary-dimm">
-              <span class="text-color-secondary font-bold text-[24px]">1º GT</span>
+              class="flex h-[60px] w-[200px] flex-col items-center justify-center rounded-full border border-color-secondary hover:bg-color-secondary-dimm"
+            >
+              <span class="text-[24px] font-bold text-color-secondary"
+                >1º GT</span
+              >
             </div>
           </div>
           <div class="swiper-slide">
             <div
-              class="flex flex-col h-[70px] w-[230px] justify-center items-center border border-color-secondary rounded-full hover:bg-color-secondary-dimm">
-              <span class="text-color-secondary font-bold text-[24px]">1º GT</span>
+              class="flex h-[60px] w-[200px] flex-col items-center justify-center rounded-full border border-color-secondary hover:bg-color-secondary-dimm"
+            >
+              <span class="text-[24px] font-bold text-color-secondary"
+                >1º GT</span
+              >
             </div>
           </div>
         </div>
@@ -65,7 +94,7 @@
     </div>
   </div>
   <div class="flex justify-center">
-    <div class="flex h-[90px] w-[85%] justify-center items-center mt-5">
+    <div class="mt-3 flex h-[90px] w-[85%] items-center justify-center">
       <div class="mx-10">
         <span class="text-xl text-color-primary">Turma: </span>
         <select name="Turma" class="rounded-full px-16">
@@ -82,9 +111,48 @@
       </div>
       <div class="mx-10">
         <span class="text-xl text-color-primary">Data: </span>
-        <input type="date" class="rounded-full">
+        <input type="date" class="rounded-full" />
       </div>
     </div>
+  </div>
+  <div class="flex h-[60px] w-[540px] justify-center">
+    <nav class="justify-center">
+      <ul class="flex justify-center">
+        <li
+          class="nav-item cursor-pointer px-6 py-4 hover:bg-neutral-400"
+          onclick="selectButton(2)"
+        >
+          Nota
+        </li>
+        <li
+          class="nav-item cursor-pointer px-6 py-4 hover:bg-neutral-400"
+          onclick="selectButton(3)"
+        >
+          Prova | Atividade
+        </li>
+        <li
+          class="nav-item cursor-pointer px-6 py-4 hover:bg-neutral-400"
+          onclick="selectButton(4)"
+        >
+          Reposições
+        </li>
+        <li
+          class="nav-item cursor-pointer px-6 py-4 hover:bg-neutral-400"
+          onclick="selectButton(5)"
+        >
+          Plano de Ensino
+        </li>
+      </ul>
+      <div id="indicator" class="h-1 w-full bg-blue-200"></div>
+    </nav>
+  </div>
+
+  <div class="container mx-auto mt-8">
+    <div id="content-1" class="hidden">Conteúdo do Botão 1</div>
+    <div id="content-2" class="hidden">Conteúdo do Botão 2</div>
+    <div id="content-3" class="hidden">Conteúdo do Botão 3</div>
+    <div id="content-4" class="hidden">Conteúdo do Botão 4</div>
+    <div id="content-5" class="hidden">Conteúdo do Botão 5</div>
   </div>
 </main>
 {% endblock %}
