Deleted some css tags

--- a/core/templates/core/turmaprofessores.html
+++ b/core/templates/core/turmaprofessores.html
@@ -1,8 +1,7 @@
 {% extends 'core/base.html' %} {% load static %} {% block head %}
 
 <!--Não está finalizado-->
-
-<link rel="stylesheet" href="{% static 'core/css/turmaprofessores.css' %}" />
+<script defer src="{% static 'core/js/turmaprofessores.js' %}"></script>
 
 {% endblock %} {% block content %}
 <main class="framed m-8 mb-20 px-5">
