--- a/core/templates/core/chamadaprofessores.html
+++ b/core/templates/core/chamadaprofessores.html
@@ -1,6 +1,6 @@
 {% extends 'core/base.html' %} {% load static %} {% block head %}
 
-<link rel="stylesheet" href="{% static 'core/dist/css/.css' %}" />
+<script defer src="{% static 'core/js/chamadaprofessores.js' %}"></script>
 
 {% endblock %} {% block content %}
 <main class="framed m-8 mb-10 px-5">
