--- a/core/templates/core/reporte.html
+++ b/core/templates/core/reporte.html
@@ -1,5 +1,6 @@
 {% extends 'core/base.html' %} {% load static %} {% block head %}
 
+<script defer src="{% static 'core/js/reporte.js' %}"></script>
 <link rel="stylesheet" href="{% static 'core/css/reporte.css' %}" />
 
 {% endblock %} {% block content %}
