Renewed boletim screen
Co-authored-by: sarahamelo <sarahamelo@users.noreply.github.com>
Co-authored-by: Bruno Martinho <Bruno-Martinho@users.noreply.github.com>

--- a/core/templates/core/comunicados.html
+++ b/core/templates/core/comunicados.html
@@ -95,10 +95,10 @@
             <label><input type="checkbox" class="h-5 w-5 border-color-txt-perfil transition"> Outros </label>
           </div>
           <div class="flex flex-row justify-center space-x-5 text-lg pt-10">
-            <button class="font-bold text-color-dark-orange hover:bg-color-hover border-color-dark-orange border-solid border-2 rounded-full py-1 px-12 transition">
+            <button type="reset" class="font-bold text-color-dark-orange hover:bg-color-hover border-color-dark-orange border-solid border-2 rounded-full py-1 px-12 transition">
               Limpar
             </button>
-            <button class="font-bold text-color-dark-orange hover:bg-color-hover border-color-dark-orange border-solid border-2 rounded-full py-1 px-12 transition">
+            <button type="submit" class="font-bold text-color-dark-orange hover:bg-color-hover border-color-dark-orange border-solid border-2 rounded-full py-1 px-12 transition">
               Aplicar
             </button>
           </div>
